# signal-crates

./: .gitignore  Cargo.toml  run-all-tla.sh  shell.nix  test-all.sh
mmapcatch/: Cargo.toml
mmapcatch/src/: lib.rs
nix/: sources.json
signal_lock/: Cargo.toml  README.adoc
signal_lock/benches/: lock.rs
signal_lock/examples/: optimistic_handler.rs
signal_lock/src/: fake_futex.rs  fake_signal.rs  futex.rs  lib.rs  park.rs  pipe.rs
signal_lock/tests/: antagonist.rs  fake_signal.rs  fork.rs  loom.rs  loom_signal.rs  testcommon.rs
signal_lock/tests/common/: mod.rs
tla/: futex-liveness1.cfg  futex-liveness2.cfg  futex-liveness3.cfg  futex.cfg  futex.tla  pipe.cfg  pipe.tla  pipe2.cfg
